# wfmash-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: binary_finder.rs  config.rs  error.rs  lib.rs  orchestrator.rs
tests/: integration_test.rs
